WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
285317
Internal clients unable to set context menu images
https://bugs.webkit.org/show_bug.cgi?id=285317
Summary
Internal clients unable to set context menu images
Lily Spiniolas
Reported
2025-01-02 14:56:50 PST
Internal clients do not have a way to set images for NSMenuItems.
Attachments
Add attachment
proposed patch, testcase, etc.
Lily Spiniolas
Comment 1
2025-01-02 14:58:19 PST
rdar://139537720
Lily Spiniolas
Comment 2
2025-01-02 23:02:02 PST
Pull request:
https://github.com/WebKit/WebKit/pull/38488
EWS
Comment 3
2025-01-06 10:14:27 PST
Committed
288471@main
(c6bfe500c5dc): <
https://commits.webkit.org/288471@main
> Reviewed commits have been landed. Closing PR #38488 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug